--- a/packages/edit-post/src/components/editor-regions/style.scss
+++ b/packages/edit-post/src/components/editor-regions/style.scss
@@ -53,6 +53,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	background: $white;
 
 	&:empty {
 		display: none;
@@ -63,7 +64,7 @@
 		overflow: auto;
 		border-left: $border-width solid $light-gray-500;
 		position: relative !important;
-		z-index: initial;
+		z-index: z-index(".edit-post-editor-regions__sidebar {greater than small}");
 	}
 }
 
@@ -71,14 +72,19 @@
 	flex-shrink: 0;
 	height: auto;  // Keep the height flexible.
 	border-bottom: $border-width solid $light-gray-500;
+	z-index: z-index(".edit-post-editor-regions__header");
 
 	// On Mobile the header is sticky.
 	position: sticky;
 	top: 0;
+
+	@include break-small() {
+		top: $admin-bar-height-big; // The top bar is fixed on this breakpoint.
+	}
+
 	@include break-medium() {
 		// Cancel the fixed positionning used in mobile.
 		position: initial;
-		overflow: auto;
 	}
 }
 
